Fix sizing of about us images on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -92,14 +92,23 @@ nav a:hover {
     margin-top: 20px;
 }
 
+.about-us-images {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+    flex-wrap: wrap;
+}
+
 .about-us-images img {
-    width: 50%;
+    width: 100%;
     max-width: 100%;
     height: auto;
     display: inline-block;
     margin: 0 10px;
     cursor: pointer;
 }
+
 .video-row {
     display: flex;
     justify-content: space-between;
